--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button>.</button>
             <button>/</button>
             <button id="equals">=</button>
-            <button id="d">D</button>
+            <button id="del">DEL</button>
 
         </div>
         <br />
