--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
         <button id="clear">CLEAR</button>
 
+        <footer class="footer" >
+            <marquee>
+                <p>By SH_Prince</p>
+            </marquee>
+        </footer>
+
     </div>
 
     <script src="index.js">
