Logo added and color changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <div class="calculator">
-        <h4>MADE IN RGSS</h4>
+       <div class="image">
+        <h5>MADE IN RGSS</h5> <a href="https://redemptiongateschool.com/" target="_blank"><img src="rgss-logo.jpeg"  alt="RGSS" width="40px" height="40px" class="imgs"/></a>
+       </div> 
         <div class="screen">0</div>
         <br />
 
